--- a/README.org
+++ b/README.org
@@ -43,6 +43,22 @@
 
   Но у pipe'ов есть (+) с помощью них можно делать не просто
   вызов, а вызов содержащий логику. Например что-то вроде Maybe.
+* Вызов функции из PipeOpFactory
+
+  У меня была мысль добавить возможность вызова функции находящейся
+  в PipeOpFactory. Сейчас приходится писать =print(sum(2)(1));=
+  вместо =print(sum(1, 2));=. Но добавить такую возможность не
+  получилось так как я не знаю как поступить в данном случае:
+  #+BEGIN_SRC cpp
+    struct Sum {
+        int operator()(int i, int j);        // 1
+        int operator()(int i, int j, int k); // 2
+    };
+
+    auto sum = pipe_op_factory(Sum());
+
+    print(sum(1, 2)); // это вызов метода 1, или привязка метода 2?
+  #+END_SRC
 
 * Про JUST_RETURN
 
