--- a/README.org
+++ b/README.org
@@ -29,7 +29,7 @@
 
     Data() | inc_(1) | inc_(1) | print_;                    // 2
 
-    Data() | &Data::inc A(1) | &Data::inc A(1) | print A(); // 3
+    Data() | M(inc)A(1) | M(inc)A(1) | print A();           // 3
   #+END_SRC
   Тут написаны 3 способа вызова метода класса. UCS позволяет
   вызывать и функции и методы как методы, а это упрощает
@@ -39,7 +39,8 @@
   2-ой способ возможен если мы поместим Data::inc в inc_, а
   это требует дополнительных телодвижений;
   3-й способ не требует писать дополнительный код, но он выглядит
-  ужасно.
+  посредственно. С другой стороны использование метода указывается
+  явно; может для кого-то это плюс.
 
   Но у pipe'ов есть (+) с помощью них можно делать не просто
   вызов, а вызов содержащий логику. Например что-то вроде Maybe.
